--- a/src/app/shared/ui-components/organisms/os-dashboard-widgets/os-dashboard-widgets.component.scss
+++ b/src/app/shared/ui-components/organisms/os-dashboard-widgets/os-dashboard-widgets.component.scss
@@ -83,23 +83,33 @@
   // Widget sizes
   &__widget--small {
     min-height: auto;
+    grid-column: span 1;
   }
 
   &__widget--medium {
     min-height: auto;
+    grid-column: span 1;
   }
 
   &__widget--large {
     min-height: auto;
+    grid-column: span 2;
   }
 
-  &__widget--full {
+  &__widget--full-width {
     grid-column: 1 / -1;
     min-height: auto;
   }
 
   // Widget types
   &__widget--goal-progress {
+    grid-row: span 1;
+
+    &.os-dashboard-widgets__widget--large,
+    &.os-dashboard-widgets__widget--full-width {
+      grid-row: span 2;
+    }
+
     .os-dashboard-widgets__widget-content {
       display: flex;
       flex-direction: column;
@@ -108,6 +118,13 @@
   }
 
   &__widget--budget-summary {
+    grid-row: span 1;
+
+    &.os-dashboard-widgets__widget--large,
+    &.os-dashboard-widgets__widget--full-width {
+      grid-row: span 2;
+    }
+
     .os-dashboard-widgets__widget-content {
       display: flex;
       flex-direction: column;
@@ -116,6 +133,8 @@
   }
 
   &__widget--transaction-list {
+    grid-row: span 3;
+
     .os-dashboard-widgets__widget-content {
       display: flex;
       flex-direction: column;
@@ -125,7 +144,13 @@
     }
   }
 
+  &__widget--monthly-trends {
+    grid-row: span 2;
+  }
+
   &__widget--account-balance {
+    grid-row: span 1;
+
     .os-dashboard-widgets__widget-content {
       display: flex;
       flex-direction: column;
@@ -134,6 +159,8 @@
   }
 
   &__widget--quick-actions {
+    grid-row: span 1;
+
     .os-dashboard-widgets__widget-content {
       display: flex;
       flex-direction: column;
