--- a/src/app/shared/ui-components/atoms/os-select/os-select.component.scss
+++ b/src/app/shared/ui-components/atoms/os-select/os-select.component.scss
@@ -52,39 +52,50 @@
   }
 }
 
-// Material form field customization
 .os-select__form-field {
   width: 100%;
 
   &--small {
-    .mat-mdc-form-field {
+    ::ng-deep .mat-mdc-form-field {
       font-size: var(--os-font-size-sm);
       min-height: 44px; // Touch target minimum
+
+      .mat-mdc-text-field-wrapper {
+        height: 44px !important;
+      }
     }
   }
 
   &--medium {
-    .mat-mdc-form-field {
+    ::ng-deep .mat-mdc-form-field {
       min-height: 44px; // Touch target minimum
+
+      .mat-mdc-text-field-wrapper {
+        height: 56px !important;
+      }
     }
   }
 
   &--large {
-    .mat-mdc-form-field {
+    ::ng-deep .mat-mdc-form-field {
       font-size: var(--os-font-size-lg);
       min-height: 48px; // Larger touch target
+
+      .mat-mdc-text-field-wrapper {
+        height: auto;
+      }
     }
   }
 
   &--error {
-    .mat-mdc-form-field {
+    ::ng-deep .mat-mdc-form-field {
       --mdc-outlined-text-field-error-outline-color: var(--os-color-error-500);
       --mdc-outlined-text-field-error-label-color: var(--os-color-error-500);
     }
   }
 
   &--disabled {
-    .mat-mdc-form-field {
+    ::ng-deep .mat-mdc-form-field {
       opacity: 0.6;
     }
   }
@@ -141,24 +152,18 @@
   transition: all 0.2s ease;
 
   &--small {
-    padding: var(--os-spacing-sm) var(--os-spacing-md);
     padding-right: var(--os-spacing-xl);
     font-size: var(--os-font-size-sm);
-    min-height: 44px; // Touch target minimum
   }
 
   &--medium {
-    padding: var(--os-spacing-md) var(--os-spacing-lg);
     padding-right: var(--os-spacing-xl);
     font-size: var(--os-font-size-base);
-    min-height: 44px; // Touch target minimum
   }
 
   &--large {
-    padding: var(--os-spacing-lg) var(--os-spacing-xl);
     padding-right: var(--os-spacing-xl);
     font-size: var(--os-font-size-lg);
-    min-height: 48px; // Larger touch target
   }
 
   &--error {
@@ -225,23 +230,6 @@
       .mat-mdc-form-field {
         min-height: 48px; // Larger touch target on mobile
       }
-    }
-  }
-
-  .os-select {
-    &--small {
-      min-height: 48px;
-      padding: var(--os-spacing-md) var(--os-spacing-lg);
-    }
-
-    &--medium {
-      min-height: 48px;
-      padding: var(--os-spacing-lg) var(--os-spacing-xl);
-    }
-
-    &--large {
-      min-height: 52px;
-      padding: var(--os-spacing-xl) var(--os-spacing-xxl);
     }
   }
 }
